# thesis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mas_gelu-1l.sub  mas_gpt2-small.sub  mas_gpt2-small_all.sub  n2g.sub  n2g_gelu-1l.sub  n2g_gelu-1l_1.sub  n2g_gelu-1l_2.sub  n2g_gpt2-small.sub  profile.py.lprof  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: check_latex.yml  latex.yml  publish_latex.yml  pytest.yml  static_checks.yml
conf/mas/: debug.yaml  gelu-1l-sae.yaml  gpt2-small-sae.yaml  gpt2-small-sae_all.yaml  gpt2-small-sae_debug.yaml
conf/n2g/: debug.yaml  gelu-1l-sae.yaml  gpt2-small-sae.yaml
report/: .gitignore  bibliography.bib  experimental_design.tex  main.bbl-SAVE-ERROR  main.bcf-SAVE-ERROR  main.bib  main.dvi  main.fdb_latexmk  main.fls  main.tex  pre.sty  sections.tex  symbols.sty
report/backmatter/: backpage.tex
report/beamer/: beamercolorthemeDTU.sty  beamerinnerthemeDTU.sty  beamerouterthemeDTU.sty  main.tex  preamble.tex  settings.tex
report/chapters/: conclusion.tex  discussion.tex  introduction.tex  method.tex  results.tex  theory.tex
report/experiements/: experiments.tex
report/frontmatter/: abstract.tex  acknowledgements.tex  approval.tex  frontpage.tex  glossary.tex
report/sections/: introduction.tex  method.tex  theory.tex
sandbox/: bootstrap.ipynb  bootstrap_old.ipynb  gpt2-test.ipynb  mas_html.py  mas_test.ipynb  n2g_test.ipynb  n2g_test.py  sae.ipynb
tests/: test_device.py  test_mas.py
thesis/: device.py  hooks.py  layer.py  mas.py  profile.py  sae.py  sae_mas.py
(+36 files in other folders)
